# buoy_retriever

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bandit.yaml  biome.json  docker-compose.yaml
.github/workflows/: _build_image.yml  core.yml  pipeline_aveva.yml  pipeline_hohonu.yml  pipeline_s3_timeseries.yml
backend/: Dockerfile  pyproject.toml
backend/buoy_retriever/: api.py  auth.py  settings.py  urls.py
backend/ninja_postgrest/: README.md  __init__.py  apps.py  conf.py  embedding.py  exceptions.py  headers.py  lookups.py  operators.py  parsing.py  permissions.py  query.py  registry.py  router.py  schemas.py  serialization.py  views.py
backend/ninja_postgrest/tests/: conftest.py  test_conf.py  test_endpoints.py  test_operators.py  test_parsing.py  test_postgrest_client.py
backend/pipelines/: api.py  models.py
common/: pyproject.toml
common/config/: aveva_source.py  mappings.py
common/io/: __init__.py  parquet_io.py
common/pipeline/: shared_pipeline.py
common/resource/: aveva_resource.py
common/test_utils/: snapshot.py
common/tests/io/: test_parquet_io.py
docker-data/datasets_config/aveva_pipeline/: aveva_test.json
docker-data/test-data/: test_daily_asset.obtained.csv
docker-data/test-data/aveva_timeseries/fixtures/: aveva.json
docker-data/test-data/aveva_timeseries/test_aveva/: aveva_testing_2026-03.nc  test_aveva_20260302.csv  test_aveva_202605.nc  test_aveva_20260509.csv  test_aveva_20260510.csv
docker-data/test-data/hohonu/: test_daily_asset.csv  test_monthly_asset.nc  test_monthly_parquet_asset.parquet
docker-data/test-data/s3_timeseries/empire_met/: test_empire_met_daily_asset.csv
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx
pipeline/_dagster/: workspace.yaml
pipeline/aveva/: Dockerfile  pipeline.py  pyproject.toml
pipeline/aveva/config/: aveva_resource.py
pipeline/aveva/tests/: conftest.py  test_datasets.py
pipeline/aveva/tests/test_data/: test_aveva_20260302.csv
pipeline/hohonu/: Dockerfile  hohonu.py  pyproject.toml
pipeline/hohonu/tests/: test_hohonu_pipeline.py
pipeline/s3_timeseries/: Dockerfile  pipeline.py  pyproject.toml
pipeline/s3_timeseries/tests/: conftest.py  test_datasets.py  test_empire_met.py
proxy/: Dockerfile  index.html
proxy/templates/: default.conf.template
