[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "backend"
version = "0.1.0"

authors = [ { name = "Alex Kerney", email = "abk@mac.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [ "django-ninja-jwt>5,<6" ]

[tool.ruff]
lint.extend-select = [
  "DJ", # django specific linting
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "buoy_retriever.settings"
python_files = [ "tests.py", "test_*.py" ]

[tool.pytest_env]
BACKEND_ENV = { value = "testing" }
BACKEND_SECRET_KEY = { value = "testing" }

[tool.coverage.run]
omit = [
  ".pixi/*",
]

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "linux-aarch64" ]

# [tool.pixi.pypi-dependencies]
# backend = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
django = ">=5.2.6,<6"
django-ninja = ">=1.4.3,<2"
psycopg = ">=3.2.9,<4"
django-cors-headers = ">=4.9.0,<5"
django-health-check = ">=3.20.0,<4"
sentry-sdk = ">=2.43.0,<3"
django-guardian = ">=3.0.0,<4"

[tool.pixi.feature.dev.dependencies]
pytest-django = "*"
pytest-cov = ">=7.1.0,<8"
pytest-env = ">=1.6.0,<2"

[tool.pixi.environments]
dev = [ "dev" ]

[tool.pixi.feature.dev.tasks]
pytest = "pytest -vv --ignore=common"

[tool.bandit]
exclude_dirs = [ "tests" ]
